# NeuroTopology-Sim

./: .dockerignore  .gitignore  DEPLOYMENT_EXECUTION_REPORT.md  DEPLOYMENT_PLAN_Real_Data_Validation.md  DEPLOYMENT_RESEARCH_GUIDE.md  IMPLEMENTATION_GUIDE_PHASES_3_4.md  Makefile  PHASE_5a_COMPLETION_REPORT.md  README.md  REPORT_dandi000458_isoflurane_topology.md  REPORT_ds006072_psilocybin_persistence_topology.md  SPRINT_SUMMARY_CROSS_MODAL_FUSION.md  main.py  requirements.txt
analysis/: connectivity_topology.py  permutation.py
apps/awareness_studio/: .env.example  Dockerfile  README.md  pyproject.toml
apps/awareness_studio/inputs/: suttacentral_seed_cards.jsonl
apps/awareness_studio/inputs/notion_export/: run41_theravada_suttacentral_integration.md
apps/awareness_studio/inputs/sim_artifacts/: REPORT_ds004572_hypnosis_topology.md  REPORT_ds004917_pcist_tms_topology.md  REPORT_ds005555_boas_sleep_topology.md
apps/awareness_studio/src/awareness_studio/: chat_cli.py  config.py  index_build.py
apps/awareness_studio/src/awareness_studio/orchestrator/: event_log.py  event_model.py  orchestrator.py
apps/awareness_studio/src/awareness_studio/web/: app.py
apps/awareness_studio/tests/: golden_questions.json  test_embeddings.py  test_suttacentral_seed_cards.py
config/: deployment_research.yaml  fusion_defaults.yaml
core/: topology.py
data/: README.md  bids_ingest.py
docs/: contributing.md  dataset_scouting_ledger.md  ds005620_contract_activation_runbook.md  ds005620_empirical_runbook.md  ds005620_real_benchmark_readiness_runbook.md  overnight_run_status.md  (+3 more)
(+173 files in other folders)
