[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awareness-studio"
version = "0.2.0"
description = "Book Generator + Guidance Chatbot for Awareness Research"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai   = []                    # No SDK needed — uses stdlib urllib
embeddings = ["numpy>=1.24"]     # Optional fast path for cosine similarity
web = ["fastapi>=0.111", "uvicorn[standard]>=0.29"]
dev = ["pytest>=8", "pytest-cov", "httpx>=0.27"]  # httpx needed for FastAPI TestClient

[project.scripts]
awareness-chat  = "awareness_studio.chat_cli:main"
awareness-book  = "awareness_studio.book_generator:main"
awareness-index = "awareness_studio.index_build:main"
awareness-eval  = "awareness_studio.eval_runner:main"
awareness-web   = "awareness_studio.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
